--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,9 @@ footer {
   max-width: 100%;
 }
 @media screen and (min-width: 680px) {
+    h1{
+        font-size: 40.5px;
+    }
   .hero,
   .two,
   .three,
