--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,14 @@
     src: url('../Inter/Inter-VariableFont_slnt\,wght.ttf');
 }
 .container-all {
-  margin: 0 auto;
-  max-width: 100%;
   font-family: inter;
+    width: 100%;
+  margin: 0 auto;
+  padding:  10px 40px;
 }
 .first {
   background-color: #f5f8fd;
-  padding: 20px 30px;
+  /* padding: 20px 30px; */
 }
 img {
   max-width: 90%;
@@ -26,7 +27,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-    margin: 20px 40px;
+    /* margin: 20px 40px; */
 }
 /* nav img {
   width: 100px;
@@ -37,11 +38,15 @@ nav {
 h2 {
   font-size: 15px;
   color: #124ca4;
+   line-height: 1.25;
+  letter-spacing: 0.25rem;
 }
 h1 {
   font-size: 30.5px;
   margin-bottom: 10px;
   color: #372f2f;
+  line-height: 1.25;
+  letter-spacing: 0.25rem;
 }
 .hero h1{
     /* text-align: center; */
@@ -57,6 +62,8 @@ p {
 .hero-text h1 {
   margin-bottom: 15px;
   font-size: 40px;
+   line-height: 1.25;
+  letter-spacing: 0.25rem;
 }
 
 input {
@@ -87,7 +94,7 @@ max-width: 100%;
 }
 .one {
   background-color: white;
-  padding: 20px 40px;
+  /* padding: 20px 40px; */
 }
 
 .logo img {
@@ -116,14 +123,14 @@ max-width: 100%;
 .two {
   /* margin: 20px 0; */
   background-color: #f5f8fd;
-  padding: 20px 40px;
+  /* padding: 20px 40px; */
 }
 .three {
-  padding: 20px 40px;
+  /* padding: 20px 40px; */
   background-color: white;
 }
 .four {
-  padding: 20px 40px;
+  /* padding: 20px 40px; */
   background-color: #f5f8fd;
 }
 
@@ -144,7 +151,7 @@ button:hover {
 .five {
   background-color: white;
   padding: 100px 0;
-  margin: 20px 40px;
+  /* margin: 20px 40px; */
 }
 .new {
   max-width: 800px;
@@ -152,7 +159,7 @@ button:hover {
 }
 footer {
   background-color: #f5f8fd;
-  padding: 20px 40px;
+  /* padding: 20px 40px; */
   display: flex;
   flex-direction: column;
 }
@@ -166,7 +173,7 @@ footer {
 .icon img {
   max-width: 100%;
 }
-@media screen and (min-width: 680px) {
+@media screen and (min-width: 768px) {
     h1{
         font-size: 40.5px;
     }
